--- a/src/MongoDB.Repository/MongoDB.Repository.csproj
+++ b/src/MongoDB.Repository/MongoDB.Repository.csproj
@@ -69,6 +69,9 @@
     <Content Include="ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>$(SolutionDir)tools\ilmerge /target:library /out:$(TargetDir)MongoDB.dll /targetplatform:v4 /log $(ProjectDir)$(OutDir)MongoDB.Driver.dll $(ProjectDir)$(OutDir)MongoDB.Bson.dll $(ProjectDir)$(OutDir)MongoDB.Repository.dll</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
